# Makina

./: CMakeLists.txt  LICENSE  README.md
res/: iris.nn  iris_dataset_testing.csv  iris_dataset_training.csv
src/: main.c  makina.h
